--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -29,4 +29,4 @@ $sides: (top, bottom, left, right);
 // Screen sizes
 $formats: (mobile, tablet, desktop);
 $ms-mobile	: 480px !default;
-$ms-tablet	: 1024px !default;
+$ms-tablet	: 1350px !default;
